--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["David Eklund <deklund@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
