--- a/Project.toml
+++ b/Project.toml
@@ -21,5 +21,6 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
