--- a/Project.toml
+++ b/Project.toml
@@ -5,18 +5,21 @@ version = "0.1.0"
 
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
+Blink = "ad839575-38b3-5650-b840-f874b8c74a25"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 Debugger = "31a5f54b-26ea-5ae9-a837-f05ce5417438"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Mux = "a975b10e-0019-58db-a62f-e48ff68538c9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
