--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 Debugger = "31a5f54b-26ea-5ae9-a837-f05ce5417438"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
@@ -23,9 +24,11 @@ Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mux = "a975b10e-0019-58db-a62f-e48ff68538c9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
